# silmari

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  e2e.yml
docs/: architecture.md  implementation-plan.md  spec.md
examples/bots/example-ruleset/: manifest.yaml  pipeline.py  ruleset.json
examples/bots/example-signal/: manifest.yaml  pipeline.py
examples/frontend/: index.html
examples/frontend/e2e/: .gitignore  README.md  package.json  playwright.config.ts
examples/frontend/e2e/tests/: authoring.spec.ts  review-flow.spec.ts
