# Silmari workspace root (virtual project — no [build-system], so it is not built/installed;
# its dependencies pull in the workspace member packages for development).
[project]
name = "silmari-workspace"
version = "0"
description = "Silmari monorepo workspace root."
requires-python = ">=3.11"
dependencies = [
    "silmari-core",
    "silmari-runtime",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
silmari-core = { workspace = true }
silmari-runtime = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
